--- a/style.css
+++ b/style.css
@@ -29,3 +29,25 @@ li a {
   display: block;
   text-align: center;
 }
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  /* Footer height */
+}
+
+.page-container {
+  position: relative;
+  min-height: 100vh;
+  background-color: black;
+
+}
+
+.content-wrap {
+  width: 100%;
+  padding-bottom: 2.5rem;
+  background-color: brown;
+  /* Footer height */
+}
