--- a/style.css
+++ b/style.css
@@ -25,29 +25,41 @@ li a:hover {
 
 */
 
-li a {
+/* li a {
   display: block;
   text-align: center;
+} */
+
+.list-group a {
+  margin-top: 2vh;
 }
+
+#page-container {
+  position: relative;
+  min-height: 100vh;
+  background-color: black;
+}
+
+#content-page-container {
+  background-color: aqua;
+  height: 100vh;
+  padding-bottom: 2.5rem;
+  /* Footer height */
+}
+
+#left-content-container {
+  background-color: black;
+}
+
+#right-content-container {
+  background-color: red;
+}
+
 
 footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 2.5rem;
-  /* Footer height */
-}
-
-.page-container {
-  position: relative;
-  min-height: 100vh;
-  background-color: black;
-
-}
-
-.content-wrap {
-  width: 100%;
-  padding-bottom: 2.5rem;
-  background-color: brown;
   /* Footer height */
 }
