--- a/style.css
+++ b/style.css
@@ -1,35 +1,3 @@
-/* ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  background-color: #f1f1f1;
-}
-
-li a {
-  display: block;
-  color: #000;
-  text-decoration: none;
-  text-align: center;
-  height: 10vh;
-}
-
-li a:hover {
-  background-color: #555;
-  color: white;
-}
-
-.logo {
-  text-align: center;
-  vertical-align: baseline;
-}
-
-*/
-
-/* li a {
-  display: block;
-  text-align: center;
-} */
-
 .list-group a {
   margin-top: 2vh;
 }
@@ -51,8 +19,54 @@ li a:hover {
   background-color: black;
 }
 
+#left-content-container img {
+  max-width: 80%;
+  height: auto;
+  padding: 1vh;
+  margin-top: 1vh;
+  margin-bottom: 3vh;
+}
+
 #right-content-container {
-  background-color: red;
+  background-color: white;
+  overflow: hidden;
+  position: relative;
+  padding: 0px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: rgb(127, 139, 143);
+}
+
+#right-content-container:hover .overlay {
+  opacity: 0.8;
+}
+
+#backgroundImg {
+  width: 100%;
+  display: block;
+  background-size: contain;
+}
+
+.text {
+  color: white;
+  font-size: 5vh;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 
