--- a/style.css
+++ b/style.css
@@ -2,14 +2,13 @@
   margin-top: 2vh;
 }
 
-#page-container {
+#whole-page-container {
   position: relative;
   min-height: 110vh;
   background-color: black;
 }
 
 #content-page-container {
-  background-color: aqua;
   height: 110vh;
   padding-bottom: 2.5rem;
   /* Footer height */
@@ -49,7 +48,7 @@
   font-size: 36px;
 }
 
-#img-content-container {
+#button-img-container {
   background-color: black;
   position: relative;
   padding: 0px;
@@ -57,7 +56,7 @@
   height: auto;
 }
 
-#real-container {
+#img-container {
   position: relative;
 }
 
@@ -67,7 +66,7 @@
   background-size: contain;
 }
 
-#real-container:hover .overlay {
+#img-container:hover .overlay {
   opacity: 0.8;
 }
 
@@ -112,6 +111,23 @@
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
+}
+
+@media screen and (min-width: 856px) {
+  .below-img-container {
+    display: none;
+  }
+}
+
+.below-img-container {
+  text-align: center;
+  background-color: black;
+}
+
+.main-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
 
 footer {
