--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+html{
+  position: relative;
+  min-height: 100%;
+}
+body{
+  margin-bottom: 100px;
+}
+.parallax {
+  /* The image used */
+  background-image: url("./images/joffre.jpeg");
+
+  /* Set a specific height */
+  min-height: 100vh; 
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 #whole-page-container {
   position: relative;
   min-height: 100vh;
@@ -6,9 +26,11 @@
 
 #content-page-container {
   height: 100vh;
-  padding-bottom: 2.5rem;
+  /* padding-bottom: 2.5rem; */
   /* Footer height */
 }
+
+
 
 /* menu bar */
 .list-group a {
@@ -53,7 +75,7 @@
   font-size: 36px;
   z-index: 4;
 }
-
+/* 
 #button-img-container {
   background-color: black;
   position: relative;
@@ -74,7 +96,9 @@
 
 #img-container:hover .overlay {
   opacity: 0.8;
-}
+} */
+
+
 
 .openbtn {
   position: absolute;
@@ -89,7 +113,11 @@
   height: 50px;
   width: 200px;
 }
-
+.sticky {
+  position: fixed;
+  top: 8px;
+  width:200px;
+}
 .openbtn:hover {
   background-color: #444;
 }
@@ -131,13 +159,14 @@
 }
 
 footer {
-  position: absolute;
+  position: fixed;
+  left: 0;
   bottom: 0;
   width: 100%;
-  height: 2.5rem;
-  /* Footer height */
+  background-color: black;
+  color: white;
+  text-align: center;
 }
-
 
 /* about me */
 
